Setup project structure with Dockerized multi-service architecture

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,20 +1,40 @@
 events {}
 
 http {
-  server {
-    listen 80;
-    server_name localhost;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    location / {
-      proxy_pass http://frontend:3000;
-    }
+    server {
+        listen 80;
+        server_name localhost;
 
-    location /wp/ {
-      proxy_pass http://wordpress:80;
-    }
+        root /var/www/html/web;
+        index index.php;
 
-    location /api/ {
-      proxy_pass http://wordpress:80/wp-json/;
+        # 2. Статичні файли
+        location / {
+            try_files $uri $uri/ /index.php?$args;
+        }
+
+        # 3. PHP-запити
+        location ~ \.php$ {
+            # потрібне для /index.php/anything
+            fastcgi_split_path_info ^(.+\.php)(/.*)$;
+
+            fastcgi_pass   wordpress:9000;
+            fastcgi_index  index.php;
+
+            # стандартний набір змінних FastCGI
+            include        fastcgi_params;
+
+            # шлях до скрипта
+            fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        }
+
+        # 4. (необов’язково) кеш для статики
+        location ~* \.(?:css|js|jpe?g|png|gif|svg|woff2?)$ {
+            expires 7d;
+            access_log off;
+        }
     }
-  }
 }
