--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
 
   wordpress:
     build:
-      context: ./docker/wordpress/
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./docker/wordpress/Dockerfile
     container_name: wordpress
     restart: always
     volumes:
@@ -30,13 +30,14 @@ services:
 
   frontend:
     build:
-      context: ./frontend
+      context: .
+      dockerfile: ./docker/frontend/Dockerfile
     container_name: frontend
     restart: always
     ports:
       - 3000:3000
     volumes:
-      - ./frontend:/app
+      - ./app:/app
     working_dir: /app
     command: ["npm", "run", "dev"]
 
@@ -46,7 +47,9 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./backend:/var/www/html:ro
+
     depends_on:
       - wordpress
       - frontend
