Enhance WordPress API support and environment setup
- Add rewrite rules for WordPress REST API in Nginx config.
- Update `.gitignore` to include `.env.example`.
- Introduce `WP_API_URL` in Next.js configuration and add `.env.example` file.
- Minor code style improvements in `layout.js`.

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -11,27 +11,24 @@ http {
         root /var/www/html/web;
         index index.php;
 
-        # 2. Статичні файли
+        rewrite ^/wp-json/?$      /index.php?rest_route=/       last;
+        rewrite ^/wp-json/(.*)$   /index.php?rest_route=/$1     last;
+
         location / {
             try_files $uri $uri/ /index.php?$args;
         }
 
-        # 3. PHP-запити
         location ~ \.php$ {
-            # потрібне для /index.php/anything
             fastcgi_split_path_info ^(.+\.php)(/.*)$;
 
             fastcgi_pass   wordpress:9000;
             fastcgi_index  index.php;
 
-            # стандартний набір змінних FastCGI
             include        fastcgi_params;
 
-            # шлях до скрипта
             fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
 
-        # 4. (необов’язково) кеш для статики
         location ~* \.(?:css|js|jpe?g|png|gif|svg|woff2?)$ {
             expires 7d;
             access_log off;
