Add headless WordPress theme and API extensions
- Introduce "WP Headless" theme with custom support for menus.
- Add a plugin to extend WordPress REST API with menu support.
- Update Nginx config to rewrite `/api` requests to WordPress REST API.
- Adjust `.gitignore` for new mu-plugins folder structure.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Application
 /backend/web/app/plugins/*
 /backend/!web/app/plugins/.gitkeep
-/backend/web/app/mu-plugins/*/
+/backend/web/app/mu-plugins/bedrock-disallow-indexing/
 /backend/web/app/themes/twentytwentyfive/
 /backend/web/app/upgrade
 /backend/web/app/uploads/*
