--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -29,6 +29,12 @@ http {
             fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
 
+        location ^~ /api/ {
+            rewrite ^/api/?$  /wp-json/          break;
+            rewrite ^/api/(.*)$ /wp-json/wp/v2/$1 break;
+            try_files $uri $uri/ /index.php?$args;
+        }
+
         location ~* \.(?:css|js|jpe?g|png|gif|svg|woff2?)$ {
             expires 7d;
             access_log off;
