Add MySQL Docker image to docker-compose setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 services:
   mysql:
+    build:
+      context: .
+      dockerfile: ./docker/mysql/Dockerfile
     image: mysql:5.7
     container_name: mysql
     restart: always
