--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
+DB_HOST='mysql'
 DB_NAME='database_name'
 DB_USER='database_user'
 DB_PASSWORD='database_password'
@@ -11,8 +12,10 @@ DB_PASSWORD='database_password'
 # DB_PREFIX='wp_'
 
 WP_ENV='development'
-WP_HOME='http://example.com'
+WP_HOME='http://localhost'
 WP_SITEURL="${WP_HOME}/wp"
+
+FRONT_SITEURL='http://localhost:3000'
 
 # Specify optional debug.log path
 # WP_DEBUG_LOG='/path/to/debug.log'
