Remove deprecated API routing logic; update environment variables for REST API configuration and Nginx cleanup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,6 +16,11 @@ WP_HOME='http://localhost'
 WP_SITEURL="${WP_HOME}/wp"
 
 FRONT_SITEURL='http://localhost:3000'
+REST_API_PREFIX='api'
+REST_ALLOWED_ORIGIN=http://localhost:3000,https://example.com
+REST_ALLOW_CREDENTIALS=true
+NEXT_APP_URL=http://localhost:3000
+NEXT_REDIRECT_STATUS=308
 
 # Specify optional debug.log path
 # WP_DEBUG_LOG='/path/to/debug.log'
