Add Xdebug configuration to Docker for local development
- Install and enable Xdebug in the WordPress Docker image.
- Mount `xdebug.ini` for customizable debugging settings.
- Update `docker-compose.yml` to include Xdebug configuration.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     restart: always
     volumes:
       - ./backend:/var/www/html
+      - ./docker/wordpress/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
     working_dir: /var/www/html
     environment:
       DB_HOST: mysql
