--- a/docker/wordpress/Dockerfile
+++ b/docker/wordpress/Dockerfile
@@ -4,6 +4,8 @@ RUN apt-get update && apt-get install -y \
     git unzip zip curl libpng-dev libjpeg-dev libonig-dev libxml2-dev libzip-dev libpq-dev libfreetype6-dev \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install gd pdo mysqli pdo_mysql pdo_pgsql zip \
+    && pecl install xdebug \
+    && docker-php-ext-enable xdebug \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
